Name:                help
Version:             0.9.2
Synopsis:            Generate manpages, command-line, and option parsing from a unified spec
License:             BSD3
License-file:        LICENSE
Copyright:           Copyright (c) 2007,2008 Jeremy Shaw
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
Stability:           experimental
Homepage:            http://src.seereason.com/haskell-help
Tested-With:         GHC ==6.8.2
Build-Type:          Simple
Cabal-Version:       >= 1.2
Extra-Source-Files: examples/Help.lhs examples/Makefile

Flag split-base

Library
  if flag(split-base)
    Build-Depends:     base >= 3, pretty, Extra >= 1.23
  else
    Build-Depends:     base < 3
  Exposed-Modules:   
       Text.Help
       Text.Help.Man
       Text.Help.DSL
       Text.Help.Doc
       Text.Help.Groff
       Text.Help.Util
       Text.Help.GetOpt
       Text.Help.Markup
  Ghc-Options: -O2
  Hs-Source-Dirs: src

